# ard_codex_bootstrap

./: .gitignore  AGENTS.md  IMPLEMENTATION_PROMPT.md  Makefile  PLANS.md  README_FIRST.md  external.lock.yaml  pyproject.toml  teachers.lock.yaml
.codex/agents/: bug-investigator.toml  luna-mechanical-worker.toml  research-planner.toml  scientific-reviewer.toml  terra-implementer.toml  upstream-explorer.toml
configs/audit/: bartoldson2024_adversarial_wrn94_16.yaml  chen2021_ltd_wrn34_10.yaml
configs/campaigns/: five_gpu_single_process_pilots_v1.yaml  five_gpu_single_process_v1.yaml
configs/evaluation/: pgd_saved_checkpoint.yaml
configs/execution/: ws1_prb128_gb128_localbn_v1.yaml  ws2_prb64_gb128_localbn_v1.yaml
configs/experiments/: synthetic_pgd_at.yaml  synthetic_rslad.yaml  synthetic_rslad_entropy.yaml  synthetic_rslad_joint.yaml  synthetic_rslad_student.yaml  synthetic_trades.yaml
configs/methods/: pgd_at.yaml  rslad.yaml  rslad_entropy.yaml  rslad_hard_fallback.yaml  rslad_joint.yaml  rslad_joint_downweight.yaml  rslad_student.yaml  trades.yaml
configs/pilot/: cifar10_r18_rslad_bartoldson2024_adversarial_wrn94_16.yaml  cifar10_r18_rslad_chen2021_ltd_wrn34_10.yaml
configs/production/: cifar10_r18_rslad.yaml  cifar10_r18_rslad_bartoldson2024_adversarial_wrn94_16.yaml  cifar10_r18_rslad_entropy.yaml  (+9 more)
docs/: CODEX_WORKFLOW.md  EXPERIMENT_PROTOCOL.md  FERRET_EXECUTION_PROTOCOL.md  FIVE_GPU_CAMPAIGN_PROTOCOL.md  IMPLEMENTATION_SPEC.md  README.md  REPRODUCTION_STATUS.md  RESEARCH_DECISIONS.md  SCIENTIFIC_INVARIANTS.md  TEST_STRATEGY.md  UPSTREAM_BASELINES.md  WANDB_PROTOCOL.md
requirements/: constraints.txt
scripts/: acquire_robustbench_teachers.py  audit_robustbench_teacher.py  bootstrap_external.py  bootstrap_teacher.py  external_common.py  run_saad_upstream.py  sync_wandb.py  verify.py  verify_external.py  verify_teacher.py
(+173 files in other folders)
