[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ard"
version = "0.0.0"
description = "Single-teacher adversarial robustness distillation"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.10,<3",
  "PyYAML>=6.0",
  "torch>=2.1",
  "torchvision>=0.16",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.15", "mypy>=2.3"]
tracking = ["wandb>=0.16", "pyarrow>=14"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["yaml", "torchvision", "torchvision.*", "pyarrow", "pyarrow.*", "autoattack"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "t0: fast static, import, or configuration test",
  "t1: changed-module unit test",
  "t2: fixed-batch numerical or gradient regression",
  "t3: smoke, checkpoint, tracking, or conditional GPU test",
  "t4: limited scientific verification; never pass-cached",
  "t5: production experiment; never automated or pass-cached",
  "unit: isolated unit test",
  "gpu: requires CUDA hardware",
  "slow: bounded but comparatively slow test",
  "upstream: optional subprocess differential against a pinned external clone",
  "regression: fixed-input behavioral or numerical regression",
  "smoke: tiny end-to-end smoke test",
  "wandb: W&B mock or offline integration test",
  "scientific: milestone scientific verification",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
